--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,7 +12,7 @@ Fonts are separated by a & */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Raleway";
-  --paragraph-font: Source Sans 3, Helvetica, sans-serif;
+  --paragraph-font: "Source Sans 3", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #0081af;  /* headlines on a white background */ 
