--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -7,6 +7,9 @@ nav a{
     text-align: center;
     color:#3b753b;
     text-decoration: none;
+    font-family:"verdana", "tahoma", "georgia";
+    font-size: 1.25em;
+    padding: 35px;
 }
 
 #hero-msg h1{
@@ -32,6 +35,9 @@ main section{
 
 body {
     background-color: #F8F8FF;
+    margin: 0;
+    padding: 0;
+    
 }
 
 header{
@@ -43,16 +49,19 @@ nav a:hover{
     color: #3b753b;
 }
 
-.book{
-    background-color: #F8F8FF;
-    color:#3b753b;
-    text-decoration: none;
+nav{
+    text-align: center;
 }
 
-.join{
+.book, .join{
     background-color: #deb887;
     color:#3b753b;
     text-decoration: none;
+    font-family: "verdana", "tahoma", "georgia" ;
+    font-size: 1em;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover{
@@ -68,39 +77,68 @@ nav a:hover{
 .msg{
     background-color:#deb887;
     color:#3b753b;
+    line-height: 1.5;
+    padding: 35px;
 }
 
 footer{
     background-color: #deb887;
+    font-family:"verdana", "tahoma", "georgia" ;
+    font-size: .75em;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
-home.title{
+.home-title{
     color:#3b753b;
+    margin-top: 10px;
+}
+
+h1 {
+    font-family: "copperplate", "ariel", "sans-serif";
+    font-size: 3em;
 }
 
 h4{
     color:#3b753b;
+    font-family:"verdana", "tahoma", "georgia" ;
+    font-size: 1em;
+}
+
+section h2 {
+    font-family:"copperplate", "ariel", "sans-serif";
+    font-size: 2em;
 }
 
 .msg h2{
     color:#3b753b;
+    font-family:"copperplate", "ariel", "sans-serif";
+    font-size: 2em;
+
 }
 
 .msg p{
     color:#3b753b;
+    font-family: "verdana", "tahoma", "georgia";
+    font-size: 1em;
+    padding-bottom: 15px;
 }
 
 footer h3{
-    color:#3b753b;
+    color:black;
 }
 
 footer a{
-    color:#3b753b;
+    color:black;
     text-decoration: none;
 }
 
 footer a:hover{
     color:#3b753b;
+}
+
+footer .social img{
+    padding-top: 15px;
 }
 
 .logo{
@@ -109,6 +147,7 @@ footer a:hover{
 
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 
 #hero-img{
@@ -126,4 +165,24 @@ footer p a:hover{
 
 section h2 p a{
     background-color: #deb887;
+}
+
+h2{
+    margin: 0;
+}
+
+#logo_link{
+    padding-top: 5px;
+}
+
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+
+.card-img{
+    border: 10px solid black;  
+}
+
+main section img{
+    box-sizing: border-box;
 }
