--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -3,45 +3,44 @@
     margin: 0 auto;
 }
 
-nav a{
-    text-align: center;
-    color:#3b753b;
-    text-decoration: none;
-    font-family:"verdana", "tahoma", "georgia";
-    font-size: 1.25em;
-    padding: 35px;
-}
-
-#hero-msg h1{
-    text-align: center;
-}
-
-#hero-msg h4{
-    text-align: center;
-}
-
-.button-box{
-    text-align: center;
-}
-
-main section{
-    text-align: center;
+body {
+    background-color: #F8F8FF;
+    margin: 0;
+    padding: 0;   
 }
 
 #background{
     height: 725px;
     background-color: #deb887;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
-body {
-    background-color: #F8F8FF;
-    margin: 0;
-    padding: 0;
-    
-}
+/*--------------HEADER---------------*/
 
 header{
     background-color: #deb887;
+    display: grid;
+    grid-template-columns: 150px auto;
+}
+
+.logo{
+    width: 80px;
+}
+
+#logo_link{
+    padding-top: 5px;
+    justify-self: center;
+    align-self: center;
+}
+
+nav a{
+    text-align: center;
+    color:#3b753b;
+    text-decoration: none;
+    font-family:"verdana", "tahoma", "georgia";
+    font-size: .75em;
+    padding: 35px;
 }
 
 nav a:hover{
@@ -51,6 +50,62 @@ nav a:hover{
 
 nav{
     text-align: center;
+    display: flex;
+    justify-content: space-around;
+}
+
+#hero-msg h1{
+    text-align: center;
+    grid-column: 1/4;
+}
+
+#hero-msg{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 20px;
+}
+
+#hero-msg h4{
+    color: white;
+    
+}
+
+#hero{
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    
+}
+
+#hero-img{
+    width: 100%;
+    text-align: center;
+}
+
+#hero-box{
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+.home-title{
+    color: white;
+    margin-top: 10px;
+}
+
+h1 {
+    font-family: "copperplate", "ariel", "sans-serif";
+    font-size: 2em;
+}
+
+h4{
+    color:#3b753b;
+    font-family:"verdana", "tahoma", "georgia" ;
+    font-size: 1em;
+    text-align: center;
+}
+
+.button-box{
+    text-align: center;
 }
 
 .book, .join{
@@ -59,7 +114,7 @@ nav{
     text-decoration: none;
     font-family: "verdana", "tahoma", "georgia" ;
     font-size: 1em;
-    padding: 15px 30px;
+    padding: 5px 20px;
     margin-top: 50px;
     border-radius: 5px;
 }
@@ -68,41 +123,37 @@ nav{
     background-color: #F8F8FF;
     color:#3b753b;
 }
+/*--------------MAIN--------------*/
 
-.join:hover{
-    background-color: #F8F8FF;
-    color:#3b753b;
+main{
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+}
+main section{
+    text-align: center;
 }
 
-.msg{
-    background-color:#deb887;
-    color:#3b753b;
-    line-height: 1.5;
-    padding: 35px;
+main section img{
+    box-sizing: border-box;
 }
 
-footer{
-    background-color: #deb887;
-    font-family:"verdana", "tahoma", "georgia" ;
-    font-size: .75em;
-    padding: 25px 50px;
-    margin-top: 200px;
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
 }
 
-.home-title{
-    color:#3b753b;
-    margin-top: 10px;
+.rivers-card{
+    grid-column: 2/4;
+    grid-row: 2/3;
 }
 
-h1 {
-    font-family: "copperplate", "ariel", "sans-serif";
-    font-size: 3em;
+.camping-card{
+    grid-column: 5/7;
+    grid-row: 2/3;
 }
 
-h4{
-    color:#3b753b;
-    font-family:"verdana", "tahoma", "georgia" ;
-    font-size: 1em;
+.rapids-card{
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 section h2 {
@@ -110,11 +161,54 @@ section h2 {
     font-size: 2em;
 }
 
+section h2 p a{
+    background-color: #deb887;
+}
+
+h2{
+    margin: 0;
+}
+
+.icon{
+    width: 80px;
+    padding-top: 10px;
+}
+
+.card-img, .mountains{
+    width: 100%;
+}
+
+.mountains{
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img{
+    border: 10px solid black;  
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover{
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.msg{
+    background-color:white;
+    color:#3b753b;
+    line-height: 1.5;
+    padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
 .msg h2{
     color:#3b753b;
     font-family:"copperplate", "ariel", "sans-serif";
     font-size: 2em;
-
 }
 
 .msg p{
@@ -122,6 +216,26 @@ section h2 {
     font-family: "verdana", "tahoma", "georgia";
     font-size: 1em;
     padding-bottom: 15px;
+}
+
+
+
+.join:hover{
+    background-color: #F8F8FF;
+    color:#3b753b;
+}
+
+/*--------------FOOTER--------------*/
+
+footer{
+    background-color: #deb887;
+    font-family:"verdana", "tahoma", "georgia" ;
+    font-size: .75em;
+    padding: 25px 50px;
+    margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer h3{
@@ -141,20 +255,6 @@ footer .social img{
     padding-top: 15px;
 }
 
-.logo{
-    width: 80px;
-}
-
-.icon{
-    width: 80px;
-    padding-top: 10px;
-}
-
-#hero-img{
-    width: 100%;
-    text-align: center;
-}
-
 footer p{
     font-size:1.2em;
 }
@@ -163,26 +263,47 @@ footer p a:hover{
     text-decoration: underline;
 }
 
-section h2 p a{
-    background-color: #deb887;
-}
+/*---------Don't add anything below this line-----*/
 
-h2{
-    margin: 0;
-}
 
-#logo_link{
-    padding-top: 5px;
-}
-
-.rivers-card, .camping-card, .rapids-card{
-    margin: 200px 0;
-}
-
-.card-img{
-    border: 10px solid black;  
-}
-
-main section img{
-    box-sizing: border-box;
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
