--- a/foglelibrary/styles/site-plan.css
+++ b/foglelibrary/styles/site-plan.css
@@ -11,7 +11,7 @@ Fonts are separated by a | */
   --accent2-color: #96afb8;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Univers, Myriad;
+  --heading-font: Univers, Myriad, "Gill Sans";
   --paragraph-font: Optima, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
