--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -328,8 +328,12 @@ footer p a:hover{
     grid-template-columns: 1fr 1fr; 
     grid-gap: 20px;
     justify-content: center;
-    
 }
+
+body div{
+    margin: 0 auto;
+}
+
 .bigrates-box{
     width: 400px;
     height: 600px;
@@ -425,9 +429,9 @@ ul{
 }
 
 .box-img1, .box-img2, .box-img3, .box-img4{
-    width:50px;
-    height:50px;
-    
+    width:100px;
+    height:100px;
+    float: left;
 }
 
 .bigrates-box div{
@@ -446,6 +450,7 @@ ul{
     padding: 5px 20px;
     margin-top: 50px;
     border-radius: 5px;
+    
 }
 
 @media screen and (max-width: 900px) {
