--- a/foglelibrary/styles/site-plan.css
+++ b/foglelibrary/styles/site-plan.css
@@ -5,10 +5,11 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #006400   ;
-  --secondary-color: #a3af9e ;
-  --accent1-color: #00689a;
-  --accent2-color: #96afb8;
+  --primary-color: #00689a   ;
+  --secondary-color: #96afb8 ;
+  --accent1-color: #006400;
+  --accent2-color: #ffffff;
+
 
   /* change the values below to your chosen font(s) */
   --heading-font: Univers, Myriad, "Gill Sans";
@@ -16,14 +17,14 @@ Fonts are separated by a | */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #00689a;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --headline-color-on-color: black; /* headlines on a colored background */ 
   --paragraph-color-on-white: #96afb8; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #006400  ;
-  --nav-link-color: #00689a;
-  --nav-background-color: #a3af9e;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #00689a;
+  --paragraph-color-on-color: black; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #96afb8  ;
+  --nav-link-color: white;
+  --nav-background-color: #00689a;
+  --nav-hover-link-color: #00689a;
+  --nav-hover-background-color: white;
 }
 
 
