--- a/foglelibrary/styles/style.css
+++ b/foglelibrary/styles/style.css
@@ -7,10 +7,8 @@ header{
     grid-template-columns: 150px auto;
     margin: auto;
     text-align: center;
-
-   
-
 }
+
 .logo{
     width: 50px
 }
@@ -59,7 +57,7 @@ footer .link{
     color:white;
     text-decoration: none;
     font-size: 1em;
-    text-decoration: underline;
+    padding:25px;
 }
 
 footer .link:hover{
