--- a/foglelibrary/styles/style.css
+++ b/foglelibrary/styles/style.css
@@ -38,7 +38,57 @@ nav{
     display: flex;
     justify-content: space-around;
 }
+.title{
+    font-size: 30px;
+    font-family:"Univers", Myriad, "Gill Sans" ;
+    text-align: center;
+    padding:25px;
+}
 
+.author-page{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows:1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+}
+
+.bookcover{
+    width: 200px;
+    height: 300px;
+}
+.banner{
+    grid-column: 1/5;
+    grid-row: 1/4;
+    width:100%;
+}
+.subtitle{
+    grid-column:1/5;
+    grid-row: 4/5;
+    width: 100%;
+}
+.book1{
+    grid-column: 1/2;
+    grid-row:5/7
+}
+.book2{
+    grid-column: 2/3;
+    grid-row:5/7
+}
+.book3{
+    grid-column: 3/4;
+    grid-row:5/7
+}
+.book4{
+    grid-column: 4/5;
+    grid-row:5/7
+}
+.headshot{
+    grid-column: 5/7;
+    grid-row: 1/3;
+}
+.biotext{
+    grid-column: 5/7;
+    grid-row: 3/7;
+}
 /*------FOOTER------*/
 
 footer{
@@ -192,6 +242,39 @@ body{
 #faname img:hover{
     opacity: .6;
     transform: scale(1.1); 
+}
+/*-------Favorite Books Page-------*/
+
+#image-gallery{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+}
+
+.bookimg{
+    width: 125px;
+    height: 200px;
+    margin: 2em;
+    border:black;
+    border-style: solid;
+    border-width: thick;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+#img1{
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+#img2{
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+#img3{
+    grid-column: 3/3;
+    grid-row: 1/2;
+}
+
+
 
 /*-------Brandon Sanderson Page-------*/
 
