--- a/foglelibrary/styles/style.css
+++ b/foglelibrary/styles/style.css
@@ -42,10 +42,10 @@ nav{
 /*------Author Pages------*/
 
 .title{
-    font-size: 30px;
+    font-size: 50px;
     font-family:"Univers", Myriad, "Gill Sans" ;
     text-align: center;
-    padding:25px;
+    padding:0px;
     font-variant: small-caps;
 }
 
@@ -76,7 +76,7 @@ nav{
     grid-row: 4/5;
     width: 100%;
     text-align: center;
-    font-size:20px;
+    font-size:30px;
 }
 .book1{
     grid-column: 1/2;
@@ -310,7 +310,7 @@ body{
 
 #bsbio #bsheadshot{
     width:100%;
-    border:white;
+    border:4px solid #000;
     border-radius: 3px;
 }
 
